crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_script__script_release_get_active_json.snap
---
source: tests/e2e/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 501,
  "Deleted": false,
  "Code": null,
  "Uuid": "abc123de-f456-7890-abcd-ef1234567890",
  "Note": "Initial release",
  "Author": "James",
  "AuthorEmail": "james@example.com",
  "CommitSha": null,
  "Status": 1,
  "DateReleased": "2024-01-15T10:00:00Z",
  "DatePublished": "2024-01-15T10:05:00Z"
}
