crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_script__script_secret_add_json.snap
---
source: tests/e2e/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 403,
  "Name": "NEW_SECRET",
  "LastModified": "2024-02-01T09:00:00Z"
}
