crates/hoppy-cli/tests/e2e/snapshots/e2e__cli_script__script_variable_add_json.snap
---
source: tests/e2e/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 301,
  "Name": "NEW_VAR",
  "Required": true,
  "DefaultValue": "default-value"
}
